--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <!-- quote -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">Never underestimate your own ignorance.</span>
+            <span id="quote"></span>
         </div>
         <!-- author -->
         <div class="quote-author">
             <span id="author">
-                Albert Einstein
+                
             </span>
         </div>
         <!-- Buttons -->
