--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
         <!-- quote -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote"><!-- Quote text is placed here --></span>
+            <span id="quote">
+                <!-- Quote text is placed here -->
+            </span>
         </div>
         <!-- author -->
         <div class="quote-author">
             <span id="author">
-                <!-- Quote author name is placed here -->
+               <!-- Quote author name is placed here -->
             </span>
         </div>
         <!-- Buttons -->
