--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 
     </div>
 
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
+
+
 
     <script src="app.js"></script>
 </body>
